# picoclock

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
.github/workflows/: rust.yml
color/src/: lib.rs
hd44780u/: Cargo.toml
hd44780u/src/: lib.rs
src/: clock.rs  input.rs  main.rs  snake.rs  text.rs
