[package]
name = "picoclock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# atomic-polyfill = "0.1.5"
pio = "0.2.0"
# pio-proc = { git = "https://github.com/rp-rs/pio-rs.git", branch = "main" }
panic-probe = { version = "0.2", features = ["print-rtt"] }
rp-pico = { version = "0.3.0" }
cortex-m = "0.7.2"
cortex-m-rt = { version = "0.7" }
# cortex-m-rtic = "0.6.0-rc.4"
embedded-time = "0.12.0"
# panic-halt = "0.2.0"
embedded-hal = "0.2.5"
# cortex-m-rtic = "0.6.0-alpha.5"
rp2040-boot2 = "0.2"
bitvec = { version = "0.22.3", default-features = false, features = [] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }

[profile.release]
debug = 1

[profile.dev]
debug = 1
