[package]
name = "picoclock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# atomic-polyfill = "0.1.5"
pio = "0.2.0"
# pio-proc = { git = "https://github.com/rp-rs/pio-rs.git", branch = "main" }
panic-probe = { version = "0.2", features = ["print-rtt"] }
rp-pico = { version = "0.3.0" }
cortex-m = "0.7.2"
cortex-m-rt = { version = "0.7" }
cortex-m-rtic = "1.0.0"
systick-monotonic = "1.0.0"
fugit = "0.3.5"
arrayvec = { version = "0.7", default-features = false }
# panic-halt = "0.2.0"
embedded-hal = "0.2.5"
embedded-time = "0.12"
rp2040-boot2 = "0.2"
bitvec = { version = "0.22.3", default-features = false, features = [] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
hd44780u = { path = "./hd44780u" }

[profile.release]
debug = 1

[profile.dev]
debug = 1
