[package]
name = "picoclock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pio = "0.2.0"
panic-probe = { version = "0.3", features = ["print-rtt"] }
rp-pico = { version = "0.5.0" }
cortex-m = "0.7"
cortex-m-rt = { version = "0.7" }
cortex-m-rtic = "1"
systick-monotonic = "1"
fugit = "0.3.5"
arrayvec = { version = "0.7", default-features = false }
embedded-hal = "0.2"
embedded-time = "0.12"
rp2040-boot2 = "0.2"
bitvec = { version = "0.22.3", default-features = false, features = [] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
palette = { version = "0.6", default-features = false, features = ["libm"] }
nalgebra = { version = "0.31", default-features = false, features = ["libm"] }
hd44780u = { path = "./hd44780u" }
libm = "0.2"

# Pull request fixed the issue
# [patch.crates-io]
# simba = { git = "https://github.com/AxelMontini/simba" }

[profile.release]
debug = 1

[profile.dev]
debug = 1
